refacture: ajustado arquivo js com cod com ligação

--- a/site/index.html
+++ b/site/index.html
@@ -102,21 +102,7 @@
   </footer>
 
   <script src="https://kit.fontawesome.com/xxxxxxxxxx.js" crossorigin="anonymous"></script>
-  <script>
-    // Validação do formulário de contato
-    function validateForm() {
-      var name = document.getElementById('name').value;
-      var email = document.getElementById('email').value;
-      var message = document.getElementById('message').value;
-
-      if (name === '' || email === '' || message === '') {
-        alert('Por favor, preencha todos os campos do formulário.');
-        return false;
-      }
-
-      return true;
-    }
-  </script>
+  <script src="script.js"></script>
 </body>
 
 </html>
